Fix overflowing tabs

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -3063,7 +3063,7 @@ notebook > header {
   notebook > header.top {
     border-bottom-style: solid; }
     notebook > header.top > tabs {
-      margin-bottom: -3px; }
+      margin-bottom: -2px; }
       notebook > header.top > tabs > tab:backdrop {
         box-shadow: none; }
       notebook > header.top > tabs > tab:checked {
