--- a/gtk-3.0/widgets/_notebooks.scss
+++ b/gtk-3.0/widgets/_notebooks.scss
@@ -18,7 +18,7 @@ notebook {
     &.top {
       border-bottom-style: solid;
       > tabs {
-        margin-bottom: -3px;
+        margin-bottom: -2px;
         > tab {
 
 
